# PokeGanWebsite

./: app.py  pyproject.toml  requirements.txt
templates/: about.html  add-temp.html  entry.html  how.html  index.html  layout.html  map.html  mytemps.html  privacy.html  view.html  zip.html
templates/includes/: _navbar.html
