[tool.poetry]
name = "repl_python3_beta_Schedule-Share"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"
flask = "^1.1.2"
flask-dance = "^3.0.0"
flask-pymongo = "^2.3.0"
flask-sslify = "^0.1.5"
dnspython = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
